2006-02-21  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-config.cc: Account for additional -source
	chroots.

2006-02-21  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document automatic block-device creation for lvm-snapshot
	chroots.

	* TODO: Remove completed item.

	* schroot/schroot.conf.5.in: Document automatic block-device
	creation for lvm-snapshot chroots.

	* schroot/sbuild-chroot-config.cc (parse_data): Create a
	corresponding block-device chroot for each lvm-snapshot chroot.
	"-source" is appended to the chroot name and its aliases.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot.1.in: Document how to remove dchroot.conf.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot.1.in: Document reasons why schroot.conf should
	be used in preference to dchroot.conf.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot-session.cc (run_impl): Use boost::format rather
	than printf specifiers.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* Update po files.

	* po/POTFILES.in: Add dchroot files.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* .cvsignore: Update for dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Use ACTION_LOCATION, not
	ACTION_INFO_LOCATION.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update for version 0.2.3-1.

	* debian/README.Debian: Update dchroot notes.

	* debian/rules (config.status): Add --enable-dchroot to configure,
	to package the dchroot + wrapper.

	* debian/control (schroot): Provide, Conflict and Replace dchroot.
	Enhances sbuild.  Suggest lvm-common for LVM support.  Update
	description.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* NEWS: Add dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Document new --location option.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Add dchroot.

	* configure.ac: Create schroot/dchroot.1.
